--- a/index.html
+++ b/index.html
@@ -644,5 +644,23 @@
         // When DOM is ready, initialize
         document.addEventListener('DOMContentLoaded', initialize);
     </script>
+    <script src="/socket.io/socket.io.js"></script>
+<script>
+  const socket = io();
+
+  // Send message
+  document.getElementById('sendButton').addEventListener('click', () => {
+    const input = document.getElementById('messageInput');
+    socket.emit('chat message', input.value);
+    input.value = '';
+  });
+
+  // Receive message
+  socket.on('chat message', (msg) => {
+    const li = document.createElement('li');
+    li.textContent = msg;
+    document.getElementById('messages').appendChild(li);
+  });
+</script>
 </body>
 </html>
