--- a/public/index.html
+++ b/public/index.html
@@ -647,7 +647,7 @@
     <script src="/socket.io/socket.io.js"></script>
 <script>
   // Connect to your Render server
-  const socket = io("https://chatroom-22tb.onrender.com");
+  const socket = io("https://chatproo.onrender.com");
 
   // Send message
   document.getElementById('sendButton').addEventListener('click', () => {
